Plugin v3: Vulkan Mode full impl + LWJGL fix + Sodium mutual exclusivity